refactor code to show all the information in only 1 array

--- a/source/views/index.pug
+++ b/source/views/index.pug
@@ -11,7 +11,5 @@ block content
       +tile("tile--done", "Done", "18/12/2017")
     .api
       h1 API CALLS
-      button.getLocal Get Local Press Releases
-      p.localData
-      button.getGlobal Get Global Press Releases
-      p.globalData
+      button.getReleases Get All Press Releases
+      p.pressData
